--- a/index.html
+++ b/index.html
@@ -5,6 +5,20 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Animated Word Display</title>
   <style>
+    body {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      height: 100vh;
+      margin: 0;
+    }
+
+    #container {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+
     #wordBox {
       width: 200px;
       height: 100px;
@@ -23,8 +37,10 @@
 </head>
 <body>
 
-<div id="wordBox" onclick="showWords()">Click me</div>
-<button id="recreateButton" onclick="rotateButton()">Regenerate</button>
+<div id="container">
+  <div id="wordBox" onclick="showWords()">Click me</div>
+  <button id="recreateButton" onclick="regenerate()">Regenerate</button>
+</div>
 
 <script>
   const wordsList = ['Apple', 'Banana', 'Orange', 'Grapes', 'Pineapple'];
@@ -45,12 +61,16 @@
     }, 500);
   }
 
+  function regenerate() {
+    showWords(); // Reusing the same function for regeneration
+  }
+
   function rotateButton() {
     const recreateButton = document.getElementById('recreateButton');
 
     // Rotate the button
     recreateButton.style.transform = 'rotate(360deg)';
-    
+
     // Reset rotation after a delay
     setTimeout(() => {
       recreateButton.style.transform = 'rotate(0deg)';
