--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
 <div id="container">
   <div id="wordBox" onclick="regenerate()">Click me</div>
-  <button id="recreateButton" onclick="rotateButton()">Regenerate</button>
+  <button id="recreateButton" onclick="rotateButton(); regenerate()">Regenerate</button>
 </div>
 
 <script>
