--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Animated Word Display</title>
+  <title>Interactive Word Display</title>
   <style>
     body {
       display: flex;
@@ -11,29 +11,41 @@
       justify-content: center;
       height: 100vh;
       margin: 0;
+      background-color: #f4f4f4;
     }
 
     #container {
       display: flex;
       flex-direction: column;
       align-items: center;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+      padding: 20px;
+      background-color: #fff;
+      border-radius: 15px;
     }
 
     #wordBox {
       width: 200px;
       height: 100px;
-      background-color: white;
-      border: 1px solid black;
+      border: 1px solid #333;
       text-align: center;
       line-height: 100px;
       cursor: pointer;
-      transition: transform 0.5s ease-in-out, border-radius 0.5s ease-in-out;
+      transition: transform 0.5s ease-in-out, color 0.5s ease-in-out;
       border-radius: 15px;
+      margin-bottom: 20px;
     }
 
     #recreateButton {
-      transition: transform 0.5s ease-in-out;
+      transition: transform 0.5s ease-in-out, background-color 0.5s ease-in-out;
+      border: none;
+      padding: 10px 20px;
+      font-size: 16px;
+      cursor: pointer;
       border-radius: 10px;
+      background-color: #3498db;
+      color: #fff;
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     }
   </style>
 </head>
@@ -50,6 +62,10 @@
   function regenerate() {
     const wordBox = document.getElementById('wordBox');
     const recreateButton = document.getElementById('recreateButton');
+
+    // Random color for the word box
+    const randomColor = getRandomColor();
+    wordBox.style.color = randomColor;
 
     const randomIndex = Math.floor(Math.random() * wordsList.length);
     wordBox.textContent = wordsList[randomIndex];
@@ -73,6 +89,15 @@
     setTimeout(() => {
       recreateButton.style.transform = 'rotate(0deg)';
     }, 500);
+  }
+
+  function getRandomColor() {
+    const letters = '0123456789ABCDEF';
+    let color = '#';
+    for (let i = 0; i < 6; i++) {
+      color += letters[Math.floor(Math.random() * 16)];
+    }
+    return color;
   }
 </script>
 
