--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
       padding: 20px;
       background-color: #fff;
       border-radius: 15px;
+      position: relative;
     }
 
     #wordBox {
@@ -31,9 +32,20 @@
       text-align: center;
       line-height: 100px;
       cursor: pointer;
-      transition: transform 0.5s ease-in-out, color 0.5s ease-in-out;
+      transition: color 0.5s ease-in-out;
       border-radius: 15px;
       margin-bottom: 20px;
+    }
+
+    #overlay {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: #fff;
+      border-radius: 15px;
+      display: none;
     }
 
     #recreateButton {
@@ -53,6 +65,7 @@
 
 <div id="container">
   <div id="wordBox" onclick="regenerate()">Click me</div>
+  <div id="overlay"></div>
   <button id="recreateButton" onclick="rotateButton(); regenerate()">Regenerate</button>
 </div>
 
@@ -61,31 +74,29 @@
 
   function regenerate() {
     const wordBox = document.getElementById('wordBox');
-    const recreateButton = document.getElementById('recreateButton');
+    const overlay = document.getElementById('overlay');
 
-    // Random color for the word box
     const randomColor = getRandomColor();
     wordBox.style.color = randomColor;
 
     const randomIndex = Math.floor(Math.random() * wordsList.length);
     wordBox.textContent = wordsList[randomIndex];
 
-    // Move the box downwards
-    wordBox.style.transform = 'translateY(20px)';
 
-    // Reset transformation after a delay
+    overlay.style.display = 'block';
+
+    
     setTimeout(() => {
-      wordBox.style.transform = 'translateY(0)';
+      overlay.style.display = 'none';
     }, 500);
   }
 
   function rotateButton() {
     const recreateButton = document.getElementById('recreateButton');
 
-    // Rotate the button
+ 
     recreateButton.style.transform = 'rotate(360deg)';
 
-    // Reset rotation after a delay
     setTimeout(() => {
       recreateButton.style.transform = 'rotate(0deg)';
     }, 500);
